mobile display not working correctly on firefox fix

--- a/excel/excel.css
+++ b/excel/excel.css
@@ -203,7 +203,7 @@ strong {
 	}
 
 	#burger {
-		display: inline-block;
+		display: block;
 		position: fixed;
 		width: 28px;
 		margin-top: 68px;
